[gd_scene load_steps=10 format=3 uid="uid://cwivhfedqe3ne"]

[ext_resource type="Script" path="res://main.gd" id="1_4dy6b"]
[ext_resource type="Texture2D" uid="uid://ceaaed116xxyc" path="res://assets/backgrounds/bkgd-dungeon.png" id="1_sb1lh"]
[ext_resource type="PackedScene" uid="uid://dmtpv82hv5ngh" path="res://scenes/user_interface.tscn" id="2_yp53u"]
[ext_resource type="Texture2D" uid="uid://bv6y810yy7spc" path="res://assets/potential-use/by-sungraphica/continue.png" id="4_6xsqr"]
[ext_resource type="Script" path="res://ContinueButton.gd" id="5_xtrwl"]
[ext_resource type="Texture2D" uid="uid://yxenf0oubyj4" path="res://assets/backgrounds/cover.png" id="6_ugxgb"]

[sub_resource type="Animation" id="Animation_sks3b"]
resource_name = "traverse"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.8, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(574, 327), Vector2(574, 250), Vector2(578, 327), Vector2(580, 250), Vector2(580, 326), Vector2(582, 326)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3.42, 3.42), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("cover:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.9, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("cover:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wucbu"]
_data = {
"traverse": SubResource("Animation_sks3b")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1rwwp"]
texture = ExtResource("6_ugxgb")

[node name="main" type="Node2D" groups=["main"]]
script = ExtResource("1_4dy6b")

[node name="Bkgd-dungeon" type="Sprite2D" parent="."]
position = Vector2(577, 329)
scale = Vector2(0.601042, 0.605556)
texture = ExtResource("1_sb1lh")

[node name="UserInterface" parent="." instance=ExtResource("2_yp53u")]

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 457.0
offset_top = 308.0
offset_right = 837.0
offset_bottom = 379.0
scale = Vector2(0.49718, 0.643223)
texture_normal = ExtResource("4_6xsqr")
script = ExtResource("5_xtrwl")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(574, 327)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]
libraries = {
"": SubResource("AnimationLibrary_wucbu")
}

[node name="cover" type="Panel" parent="Camera2D"]
modulate = Color(0, 0, 0, 0)
offset_left = -574.0
offset_top = -326.0
offset_right = 574.0
offset_bottom = 330.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1rwwp")

[connection signal="mouse_entered" from="TextureButton" to="TextureButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="TextureButton" method="_on_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="TextureButton" method="_on_pressed"]
[connection signal="animation_finished" from="Camera2D/AnimationPlayer" to="." method="enter_new"]
